# LiveCoinWatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  crypto_tracker.py  livecoinwatch.py  main.py
